# sr-extra

./: .gitignore  .travis.yml  Extra.cabal  Makefile  README.md  default.nix  sr-extra.cabal
Extra/: Bool.hs  Build.hs  CIO.hs  Cabal.hs  Cache.hs  Debug.hs  Debug2.hs  Either.hs  Email.hs  EnvPath.hs  ErrorControl.hs  ErrorSet.hs  Errors.hs  Errors.hs.orig  Except.hs  ExceptOld.hs  Exit.hs  FP.hs  Files.hs  Foldable.hs  GPGSign.hs  Generics.hs  HaXml.hs  Help.hs  HelpOld.hs  HughesPJ.hs  IO.hs  IOThread.hs  List.hs  LocalStorageEncode.hs  Lock.hs  Log.hs  Misc.hs  Net.hs  Orphans.hs  Orphans.hs.orig  Orphans2.hs  Orphans3.hs  Orphans3.hs.orig  Orphans3.hs.rej  (+20 more)
Extra/Generics/: GTest.hs  Serialize.hs  Show.hs
Extra/Help/: DSL.hs  Doc.hs  Example.hs  GetOpt.hs  Groff.hs  Man.hs  Markup.hs  Util.hs
Extra/Monad/: Supply.hs
Test/: QUnit.hs
Test/QuickCheck/: Properties.hs
UnexceptionalIO/: Trans.hs
debian/: changelog  control  copyright  rules
examples/help/: Help.hs  Help.lhs  Makefile
