Name:           Extra
Version:        1.7
License:        BSD3
-- License-File:	debian/copyright
Author:         David Fox
Homepage:       http://seereason.org/
Build-Depends:  base, unix, regex-compat, time >= 1.1, MIME, Unixutils >= 1.10 , mtl, network, HaXml, pretty, directory, bytestring, process, containers, old-time, old-locale
Synopsis:       A grab bag of modules.
ghc-options:	-fglasgow-exts -O2 -fasm
C-Sources:	     cbits/gwinsz.c
Include-Dirs:        cbits
Install-Includes:    gwinsz.h
Exposed-modules:
	Extra.Bool, Extra.Either, Extra.Email, Extra.Exit, Extra.Files, Extra.HaXml
	Extra.GPGSign,Extra.List, Extra.HughesPJ, Extra.Lock, Extra.Misc, Extra.Net, Extra.SSH,
	Extra.Time, Extra.Terminal, Extra.Help, Extra.Help.Man, Extra.Help.DSL, Extra.Help.Doc,
	Extra.Help.Groff Extra.Help.Util

-- For more complex build options see:
-- http://www.haskell.org/ghc/docs/latest/html/Cabal/
