Name:           Extra
Version:        1.27
License:        BSD3
-- License-File:	debian/copyright
Author:         David Fox
Homepage:       http://seereason.org/
Build-Depends:  base, unix, regex-compat, time >= 1.1, Unixutils >= 1.10 , mtl, network, HaXml, pretty, directory, bytestring, process, containers, old-time, old-locale, QuickCheck, HUnit, random, filepath
Synopsis:       A grab bag of modules.
ghc-options:	-fglasgow-exts -O2 -fasm -W
C-Sources:	     cbits/gwinsz.c
Include-Dirs:        cbits
Install-Includes:    gwinsz.h
Exposed-modules:
	Extra.Bool, Extra.Either, Extra.Exit, Extra.Files, Extra.HaXml
	Extra.GPGSign,Extra.List, Extra.HughesPJ, Extra.Lock, Extra.Misc, Extra.Net, Extra.SSH,
	Extra.Time, Extra.Terminal, Extra.CIO, Extra.TIO, Extra.IO, Test.QUnit

-- For more complex build options see:
-- http://www.haskell.org/ghc/docs/latest/html/Cabal/
