Name:           Extra
Version:        1.43
License:        BSD3
License-File:	COPYING
Author:         David Fox
Category:       Unclassified
Description:    A hodge-podge of functions and modules that do not have a better home
Maintainer:     David Fox <david@seereason.com>
Homepage:       http://src.seereason.com/haskell-extra
Build-Depends:  base < 5, unix, regex-compat, time >= 1.1, Unixutils >= 1.50, mtl, network, pretty, directory, bytestring, process, containers, old-time, old-locale, QuickCheck >= 2 && < 3, HUnit, random, filepath, zlib, bzlib, pureMD5, progress >= 1.50
Synopsis:       A grab bag of modules.
ghc-options:	-O2 -W
C-Sources:	     cbits/gwinsz.c
Include-Dirs:        cbits
Install-Includes:    gwinsz.h
Exposed-modules:
	Extra.Bool, Extra.Either, Extra.Exit, Extra.Files,
	Extra.GPGSign,Extra.List, Extra.HughesPJ, Extra.Lock, Extra.Misc, Extra.Net, Extra.SSH,
	Extra.Time, Extra.Terminal, Extra.CIO, Extra.TIO, Extra.IO, Extra.URI, Extra.URIQuery,
        Test.QUnit, Test.QuickCheck.Properties, Extra.IOThread
Build-Type: Simple

-- For more complex build options see:
-- http://www.haskell.org/ghc/docs/latest/html/Cabal/
