Name:           sr-extra
Version:        1.50
License:        BSD3
License-File:   COPYING
Author:         David Fox
Category:       Unclassified
Description:    A hodge-podge of functions and modules that do not have a better home
Maintainer:     David Fox <dsf@seereason.com>
Homepage:       https://github.com/seereason/sr-extra
Synopsis:       A grab bag of modules.
Build-Type:     Simple
Cabal-Version:  >= 1.2
flag network-uri
 Description: Get Network.URI from the network-uri package
 Default: True

Library
  Build-Depends:
    base < 5,
    bytestring,
    bzlib,
    cereal,
    containers,
    directory,
    fgl,
    filepath,
    HUnit,
    mtl,
    pretty,
    process,
    pureMD5,
    QuickCheck >= 2 && < 3,
    random,
    safecopy,
    template-haskell,
    text,
    th-lift,
    th-lift-instances,
    time >= 1.1,
    unix,
    Unixutils >= 1.51,
    userid,
    uuid,
    uuid-orphans,
    uuid-types,
    zlib
  if flag(network-uri)
    Build-Depends: network-uri >= 2.6
  else
    Build-Depends: network >= 2.4
  ghc-options: -O -W
  ghcjs-options: -O -W
  C-Sources:         cbits/gwinsz.c
  Include-Dirs:        cbits
  Install-Includes:    gwinsz.h
  Exposed-modules:
    Extra.Bool,
    Extra.Either,
    Extra.Exit,
    Extra.Files,
    Extra.GPGSign,
    Extra.List,
    Extra.HughesPJ,
    Extra.Lock,
    Extra.Misc,
    Extra.Net,
    Extra.Orphans,
    Extra.SSH,
    Extra.Time,
    Extra.Terminal,
    Extra.URI,
    Extra.URIQuery,
    Test.QUnit,
    Test.QuickCheck.Properties,
    Extra.IOThread
