Name:           sr-extra
Version:        1.58
License:        BSD3
License-File:   COPYING
Author:         David Fox
Category:       Unclassified
Synopsis:       Module limbo
Description:
  A hodge-podge of functions, modules, and instances.  These
  generally end up here because
     1. they are needed in two unrelated packages,
     2. they belong in some upstream module,
     3. they can't be moved to an upstream module because
        they would add dependencies, or
     4. they are deprecated but still in use
Maintainer:     David Fox <dsf@seereason.com>
Homepage:       https://github.com/seereason/sr-extra
Build-Type:     Simple
Cabal-Version:  >= 1.2
flag network-uri
 Description: Get Network.URI from the network-uri package
 Default: True

Library
  GHC-Options: -Wall -Wredundant-constraints
  Build-Depends:
    base < 5,
    bytestring,
    bzlib,
    Cabal,
    cereal,
    containers,
    directory,
    exceptions,
    fgl,
    filepath,
    lens,
    ListLike,
    mtl,
    pretty,
    pureMD5,
    random,
    safecopy,
    syb,
    template-haskell,
    text,
    th-lift,
    th-lift-instances,
    th-orphans,
    time >= 1.1,
    unix,
    Unixutils >= 1.51,
    userid,
    uuid,
    uuid-orphans,
    uuid-types,
    zlib
  if flag(network-uri)
    Build-Depends: network-uri >= 2.6
  else
    Build-Depends: network >= 2.4
  C-Sources:         cbits/gwinsz.c
  Include-Dirs:        cbits
  Install-Includes:    gwinsz.h
  Exposed-modules:
    Extra.Bool,
    Extra.Debug,
    Extra.Either,
    Extra.EnvPath,
    Extra.Except,
    Extra.Exit,
    Extra.Files,
    Extra.Generics,
    Extra.List,
    Extra.HughesPJ,
    Extra.Misc,
    Extra.Net,
    Extra.Orphans,
    Extra.Orphans2,
    Extra.Pretty,
    Extra.Serialize,
    Extra.TH,
    Extra.Time,
    Extra.Terminal,
    Extra.URI,
    Extra.URIQuery,
    Extra.Verbosity,
    Extra.IOThread
  if !impl(ghcjs)
    Build-Depends:
      show-please,
      HUnit,
      process,
      process-extras,
      QuickCheck >= 2 && < 3
    Exposed-Modules:
      Extra.GPGSign,
      Extra.Lock,
      Extra.Process,
      Extra.SSH,
      Test.QUnit,
      Test.QuickCheck.Properties
